# robot_arm

./: .gitignore  README.md
src/pico_bridge/: package.xml  setup.py
src/pico_bridge/pico_bridge/: udp_bridge.py
src/pico_teleop/: package.xml  setup.cfg  setup.py
src/pico_teleop/pico_teleop/: teleop_node.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: display.launch.py
src/robot_description/meshes/collision/: Link_1.stl  Link_2.stl  Link_5.stl  Link_7.stl
src/robot_description/meshes/visual/: Link_3.stl  Link_4.stl  Link_6.stl  base_link.stl
src/robot_description/rviz/: robot_display.rviz
src/robot_description/urdf/: robot.urdf.xacro
src/robot_hardware_interface/: CMakeLists.txt  hardware_interface_plugins.xml  package.xml
src/robot_hardware_interface/include/robot_hardware_interface/: usb_serial_hardware.hpp
src/robot_hardware_interface/src/: usb_serial_hardware.cpp
src/robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/robot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  planning_pipelines.yaml  robot_arm.ros2_control.xacro  robot_arm.sim.ros2_control.xacro  robot_arm.srdf  robot_arm.urdf.xacro  ros2_controllers.yaml  servo.yaml
src/robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py
src/trac_ik/: README.md
src/trac_ik/trac_ik/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/trac_ik/trac_ik_kinematics_plugin/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  trac_ik_kinematics_description.xml
src/trac_ik/trac_ik_kinematics_plugin/include/trac_ik/: trac_ik_kinematics_plugin.hpp
src/trac_ik/trac_ik_kinematics_plugin/src/: trac_ik_kinematics_plugin.cpp  trac_ik_kinematics_plugin_parameters.yaml
src/trac_ik/trac_ik_lib/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/trac_ik/trac_ik_lib/include/trac_ik/: kdl_tl.hpp  nlopt_ik.hpp  trac_ik.hpp
src/trac_ik/trac_ik_lib/src/: kdl_tl.cpp  nlopt_ik.cpp  trac_ik.cpp
src/xr_msgs/: CMakeLists.txt  package.xml
src/xr_msgs/msg/: Controller.msg  Custom.msg  Head.msg
