<?xml version=1.0?>
<package format=3>
  <name>pico_bridge</name>
  <version>0.0.1</version>
  <description>Bridge PICO VR data to xr_msgs ROS2 messages</description>
  <maintainer email=user@example.com>user</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>xr_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
