<?xml version="1.0"?>
<package format="3">
  <name>robot_description</name>
  <version>0.0.1</version>
  <description>robot_arm robot description package</description>

  <maintainer email="ls1263871081@gmail.com">zhaoyang</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
