<?xml version="1.0"?>
<package format="3">
  <name>robot_hardware_interface</name>
  <version>0.1.0</version>
  <description>USB Serial hardware interface plugin for ros2_control</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
