<?xml version="1.0"?>
<package format="3">
  <name>xr_msgs</name>
  <version>0.0.0</version>
  <description>XR device message definitions</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export><build_type>ament_cmake</build_type></export>
</package>